--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sg108e-mgmt",
   "version": "0.1.0",
   "description": "TL-SG108E Management via Node",
-  "main": "status.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
